[package]
name = "project-gilliava"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
serde_json = "1.0"
chrono = "0.4.31"
